Add run scripts so users don't need to type raw java commands
Single master script (bin/run.sh + bin/run.bat) maps friendly sample
names to fully-qualified class names and handles JVM options and
classpath automatically. Supports --help, --list, and error messages
for unknown samples. Updated distribution.xml, README, and PROJECT.md.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>